--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,4 +8,15 @@ services:
       POSTGRES_DB: library_db
     ports:
       - 5432:5432
-
+    
+  library_app:
+    image: b0nam/library:main
+    container_name: library_app
+    depends_on:
+      - posgresql
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://posgresql:5432/library_db
+      SPRING_DATASOURCE_USERNAME: admin
+      SPRING_DATASOURCE_PASSWORD: admin@123
+    ports:
+      - 8000:8000
